--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="com.example.bikesh.checkerz.MainActivity">
+        tools:context="com.example.bikesh.checkerz.view.MainActivity">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
